socket connection build

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
-    "mongoose": "^4.13.5"
+    "mongoose": "^4.13.5",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "@angular/cli": "^1.6.0"
