--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,9 @@
     "angular-flash-message": "^3.4.0",
     "angular2-jwt": "^0.2.3",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
     "rxjs": "^5.5.2",
+    "socket.io": "^2.1.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
